syntax = "proto3";

package util.lock;

import "models/util/local_timestamp.proto";

option java_multiple_files = true;
option java_package = "common.util.locks";
option java_outer_classname = "NodeStateProtos";

message NodeStateProto {
  string object_class = 1;
  string version = 2;

  //Placeholder, will change
  string partition = 3;

  //Currently a URL, will change
  string end_point = 4;

  //The last time a node was seen
  util.LocalTimestampProto last_seen = 5;

  //Whether the lock is expired or not (owned by the lock-service)
  bool is_expired = 6;
}
