syntax = "proto3";

package valuation;

import "models/security/security.proto";
import "models/position/position.proto";
import "models/price/price.proto";

import "requests/util/operation.proto";
import "models/position/measure.proto";

option java_multiple_files = true;
option java_package = "common.request";
option java_outer_classname = "ValuationRequestProtos";

// Developer notes. Thsi will need some re-organization once we start thinking through
// varied valuations (e.g. value over a time range, value multiple securities in the same
// request/etc. For now, the caller will need to make individual requests.
message ValuationRequestProto {
  string object_class = 1;
  string version = 2;

  //Only supports GET, since there is no backing store, so CREATE isn't relevant. SEARCH isn't relevant either.
  //VALIDATE could be implemented later, e.g. if the caller wants to check their inputs are correct.
  util.RequestOperationTypeProto operation_type = 10;

  //The list of measures to be generated by this request, e.g. MARKET_VALUE, CURRENT_YIELD, etc.
  repeated position.MeasureProto measures = 30;

  //The full security object for which we are going to run the valuation
  security.SecurityProto security_input = 20;

  //The positions we are going to value.
  position.PositionProto position_input= 21;
  price.PriceProto price_input = 22;
}


