syntax = "proto3";

package valuation_service;
import "requests/valuation/valuation_request.proto";
import "requests/valuation/valuation_response.proto";

service Valuation {
    rpc RunValuation (valuation.ValuationRequestProto) returns (valuation.ValuationResponseProto);
}